<resources>
    <string name="app_name">GestMans</string>

    <!--region LOGIN_STRINGS-->
    <string name="LOGIN_USERNAME">Username</string>
    <string name="LOGIN_PASSWORD">Password</string>
    <string name="LOGIN_LOGIN">Login</string>
    <string name="LOGIN_LOGIN_QR">Login with QR</string>
    <string name="LOGIN_ERROR_USERNAME">Please, enter a valid username!</string>
    <string name="LOGIN_ERROR_PASSWORD">Please, enter a valid password!</string>
    <!--endregion-->

    <!--region APP_MAIN_STRINGS-->
    <string name="APP_MAIN_BACK_AGAIN">Press back again to log out</string>
    <!--endregion-->

    <!--region HOME_STRINGS-->
    <string name="HOME_WELCOME_FILL">Welcome, %s</string>
    <string name="HOME_WELCOME_HOLDER">Welcome</string>
    <string name="HOME_CONFIRM_LOG_OUT">Are you sure you want to log out?</string>
    <string name="HOME_WELCOME_HOLDER_USER">User</string>
    <!--endregion-->

    <!--region NEW_ORDER_COMMON_STRINGS-->
    <!--endregion-->

    <!--region NEW_ORDER_TABLE_STRINGS-->

    <!--endregion-->

    <!--region NEW_ORDER_SELECTION_STRINGS-->
    <string name="NEW_ORDER_SELECTION_TITLE">New Order for %s</string>
    <string name="NEW_ORDER_SELECTION_CREATE_ORDER">Create order</string>
    <string name="NEW_ORDER_SELECTION_CONFIRM_DISMISS">Are you sure you want to dismiss this order?</string>
    <!--endregion-->

    <!--region EDIT_ORDER_COMMON_STRINGS-->
    <!--endregion-->

    <!--region EDIT_ORDER_TABLE_STRINGS-->

    <!--endregion-->

    <!--region EDIT_ORDER_SELECTION_STRINGS-->
    <string name="EDIT_ORDER_SELECTION_TITLE">Edit Order for %s</string>
    <string name="EDIT_ORDER_SELECTION_MODIFY_ORDER">Edit order</string>
    <string name="EDIT_ORDER_SELECTION_CONFIRM_DISMISS">Are you sure you want to dismiss the modification of this order?</string>
    <!--endregion-->

    <!--region ORDER_MENU_DIALOG-->
    <string name="ORDER_MENU_DRINK">Drink</string>
    <string name="ORDER_MENU_FIRST">First</string>
    <string name="ORDER_MENU_SECOND">Second</string>
    <string name="ORDER_MENU_DESSERT">Dessert</string>
    <string name="ORDER_MENU_NAME_COLON">:Name</string>
    <string name="ORDER_MENU_QUANTITY_COLON">:Quantity</string>
    <string name="ORDER_MENU_DRINK_COLON">:Drink</string>
    <string name="ORDER_MENU_FIRST_COLON">:First</string>
    <string name="ORDER_MENU_SECOND_COLON">:Second</string>
    <string name="ORDER_MENU_DESSERT_COLON">:Dessert</string>
    <string name="ORDER_MENU_CREATE_MENU">Create menu</string>
    <string name="ORDER_MENU_TITLE">Menu info</string>
    <string name="ORDER_MENU_DISMISS_MESSAGE">Are you sure you want to dismiss this menu?</string>
    <!--endregion-->

    <!--region ORDER_COMMON_STRINGS-->
    <string name="ORDER_TABLES_NO_TABLES">No tables were found.</string>
    <string name="ORDER_TABLES_ERROR_TABLES">Error while retrieving tables.</string>
    <string name="ORDER_SELECTION_SPINNER_HINT">Dish type</string>
    <string name="ORDER_TABLE_HOLDER">Table</string>
    <string name="ORDER_QUESTION_REMOVE_DISH">Are you sure you want to delete the dish %s from the order?</string>
    <string name="ORDER_QUESTION_REMOVE_MENU">Are you sure you want to delete the menu %s from the order?</string>
    <string name="ORDER_NOTES">Order notes</string>
    <string name="ORDER_DETAILS_DISMISS_MESSAGE">Are you sure you want to dismiss the order notes screen?</string>
    <string name="ORDER_DISHES">Dishes</string>
    <string name="ORDER_MENUS">Menus</string>
    <string name="ORDER_CREATION_ERROR_SENDING_ORDER_MESSAGE">Error while sending the order.</string>
    <string name="ORDER_CREATION_ERROR_INSERTING_ORDER_MESSAGE">Error while inserting the order.</string>
    <string name="ORDER_CREATION_ERROR_UPDATING_ORDER_MESSAGE">Error while updating the order.</string>
    <string name="ORDER_MESSAGE_BOOKING">A booking is scheduled at this table at %s.</string>
    <!--endregion-->

    <!--region PERMISSIONS_STRINGS-->
    <string name="PERMISSION_GRANTED">Permission granted</string>
    <string name="PERMISSION_DENIED">Permission denied</string>
    <!--endregion-->

    <!--region ACTIVITIES_STRINGS-->
    <string name="LOGIN_ACTIVITY">LOGIN-</string>
    <string name="QR_SCANNER_ACTIVITY">QR_SCANNER-</string>
    <string name="FETCH_PHP_CLASS">FETCH_PHP-</string>
    <string name="HELPER_CLASS">HELPER-</string>
    <string name="NEW_ORDER_TABLES_FRAGMENT">NEW_ORDER_TABLES-</string>
    <string name="EDIT_ORDER_TABLES_FRAGMENT">EDIT_ORDER_TABLES-</string>
    <string name="NEW_ORDER_SELECTION_FRAGMENT">NEW_ORDER_SELECTION-</string>
    <string name="EDIT_ORDER_SELECTION_FRAGMENT">EDIT_ORDER_SELECTION-</string>
    <string name="LIST_VIEW_ORDER_DISHES_ADAPTER_CLASS">LIST_VIEW_ORDER_DISHES_ADAPTER-</string>
    <string name="LIST_VIEW_ORDER_MENUS_ADAPTER_CLASS">LIST_VIEW_ORDER_MENUS_ADAPTER-</string>
    <string name="ORDER_MENU_DIALOG">ORDER_MENU-</string>
    <string name="DISH_CLASS">DISH - </string>
    <!--endregion-->

    <!--region COMMON_STRINGS-->
    <string name="LOGO_DESCRIPTION">GestMans logo</string>
    <string name="DISMISS">Dismiss</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="OK">OK</string>
    <string name="SAVE">Save</string>
    <string name="WARNING">Warning</string>
    <string name="NEW_ORDER">New Order</string>
    <string name="EDIT_ORDER">Edit Order</string>
    <string name="LOG_OUT">Log Out</string>
    <string name="HOLDER_NUM">000</string>
    <string name="HOLDER_NAME">Name</string>
    <string name="LOADING">Loading…</string>
    <string name="ERROR">Error</string>
    <!--endregion-->

</resources>
