<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/component_round">

    <TextView
        android:id="@+id/tvTitleYesNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HOLDER_NAME"
        android:textSize="18sp"
        android:layout_margin="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvMessageYesNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMessageYesNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:text="@string/HOLDER_NAME"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleYesNo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_margin="16sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessageYesNo">

        <Button
            android:id="@+id/btnPositiveYesNo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/component_round"
            android:text="@string/YES"
            android:layout_marginEnd="16sp"
            android:textColor="@color/purpleGradient" />

        <Button
            android:id="@+id/btnNegativeYesNo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/component_round"
            android:text="@string/NO"
            android:layout_marginEnd="16sp"
            android:textColor="@color/purpleGradient" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>