<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/llMenuNameInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/llMenuQuantityInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMenuNameTitleInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:text="@string/ORDER_MENU_NAME_COLON"
            android:textDirection="rtl"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvMenuNameContentInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textColor="@color/purpleGradient"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMenuQuantityInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/llDishDrinkInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llMenuNameInfo">

        <TextView
            android:id="@+id/tvMenuQuantityTitleInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:text="@string/ORDER_MENU_QUANTITY_COLON"
            android:textDirection="rtl"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvMenuQuantityContentInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textColor="@color/purpleGradient"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDishDrinkInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/llDishFirstInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llMenuQuantityInfo">

        <TextView
            android:id="@+id/tvDishDrinkTitleInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:text="@string/ORDER_MENU_DRINK_COLON"
            android:textDirection="rtl"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDishDrinkContentInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textColor="@color/purpleGradient"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDishFirstInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/llDishSecondInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDishDrinkInfo">

        <TextView
            android:id="@+id/tvDishFirstTitleInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:text="@string/ORDER_MENU_FIRST_COLON"
            android:textDirection="rtl"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDishFirstContentInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textColor="@color/purpleGradient"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDishSecondInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/llDishDessertInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDishFirstInfo">

        <TextView
            android:id="@+id/tvDishSecondTitleInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:text="@string/ORDER_MENU_SECOND_COLON"
            android:textDirection="rtl"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDishSecondContentInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textColor="@color/purpleGradient"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDishDessertInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCloseMenuInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDishSecondInfo">

        <TextView
            android:id="@+id/tvDishDessertTitleInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:text="@string/ORDER_MENU_DESSERT_COLON"
            android:textDirection="rtl"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDishDessertContentInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textColor="@color/purpleGradient"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCloseMenuInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/component_round"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/OK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDishDessertInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>